manifest/app2/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app1
        image: gcr.io/nnyn-dev/ingress-tester:latest
        args: ["0.0.0.0:8081"]
        readinessProbe:
          httpGet:
            port: 8081
            path: "/podreadiness1"
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            port: 8081
            path: "/podliveness1"
          initialDelaySeconds: 10
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
      - name: app2
        image: gcr.io/nnyn-dev/ingress-tester:latest
        args: ["0.0.0.0:8082"]
        readinessProbe:
          httpGet:
            port: 8082
            path: "/podreadiness2"
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            port: 8082
            path: "/podliveness2"
          initialDelaySeconds: 10
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8082
...
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: app2
  ports:
  - port: 8082
    targetPort: 8082
...
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app2-ingress
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: app2-service
            servicePort: 8082
